@@ -52,7 +52,7 @@
 #define ASSERT_VALID_CODE_OFFSET(offset) // Anything goes!
 #endif
 
-#if CPU(X86) && PLATFORM(MAC)
+#if CPU(X86) && !PLATFORM(WINDOWS)
 #define CALLING_CONVENTION_IS_CDECL 1
 #else
 #define CALLING_CONVENTION_IS_CDECL 0
@@ -109,35 +109,35 @@ public:
 #if CALLING_CONVENTION_IS_CDECL
 #define STDCALL __attribute__ ((stdcall))
     template<typename returnType>
-    FunctionPtr(returnType STDCALL(*value)())
+    FunctionPtr(returnType (STDCALL *value)())
         : m_value((void*)value)
     {
         ASSERT_VALID_CODE_POINTER(m_value);
     }
 
     template<typename returnType, typename argType1>
-    FunctionPtr(returnType STDCALL(*value)(argType1))
+    FunctionPtr(returnType (STDCALL *value)(argType1))
         : m_value((void*)value)
     {
         ASSERT_VALID_CODE_POINTER(m_value);
     }
 
     template<typename returnType, typename argType1, typename argType2>
-    FunctionPtr(returnType STDCALL(*value)(argType1, argType2))
+    FunctionPtr(returnType (STDCALL *value)(argType1, argType2))
         : m_value((void*)value)
     {
         ASSERT_VALID_CODE_POINTER(m_value);
     }
 
     template<typename returnType, typename argType1, typename argType2, typename argType3>
-    FunctionPtr(returnType STDCALL(*value)(argType1, argType2, argType3))
+    FunctionPtr(returnType (STDCALL *value)(argType1, argType2, argType3))
         : m_value((void*)value)
     {
         ASSERT_VALID_CODE_POINTER(m_value);
     }
 
     template<typename returnType, typename argType1, typename argType2, typename argType3, typename argType4>
-    FunctionPtr(returnType STDCALL(*value)(argType1, argType2, argType3, argType4))
+    FunctionPtr(returnType (STDCALL *value)(argType1, argType2, argType3, argType4))
         : m_value((void*)value)
     {
         ASSERT_VALID_CODE_POINTER(m_value);
